// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Affix demos > demo: Basic 1`] = `
"<div data-measure-status="0">
  <!--v-if-->
  <div style="z-index: 10;" class=""><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <wave-stub disabled="false"></wave-stub>
      <!--v-if--><span class="ant-btn-content">Affix top</span>
    </button></div>
</div>
<br>
<div data-measure-status="0">
  <!--v-if-->
  <div style="z-index: 10;" class=""><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <wave-stub disabled="false"></wave-stub>
      <!--v-if--><span class="ant-btn-content">Affix bottom</span>
    </button></div>
</div>"
`;

exports[`Affix demos > demo: OnChange 1`] = `
"<div data-measure-status="0">
  <!--v-if-->
  <div style="z-index: 10;" class=""><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <wave-stub disabled="false"></wave-stub>
      <!--v-if--><span class="ant-btn-content">120px to affix top</span>
    </button></div>
</div>"
`;

exports[`Affix demos > demo: Target 1`] = `
"<div data-v-ee44d2e9="" id="components-affix-demo-target" class="scrollable-container">
  <div data-v-ee44d2e9="" class="background">
    <div data-v-ee44d2e9="" data-measure-status="0">
      <!--v-if-->
      <div style="z-index: 10;" class=""><button data-v-ee44d2e9="" class="ant-btn ant-btn-solid ant-btn-md" type="button">
          <wave-stub disabled="false"></wave-stub>
          <!--v-if--><span class="ant-btn-content">Fixed at the top of container</span>
        </button></div>
    </div>
  </div>
</div>"
`;
